# -

./: .gitignore  CV.py  _auto_decrypt.bat  check_and_fix_env.bat  check_env.py  check_ocr_env.py  check_system_status.py  clean_test_env.bat  clear_python_cache.bat  config_local.example.py  configure_onnxocr_offline.bat  debug_vmware_window_tree.py  dxpyd导入问题修复说明.md  ensure_deps.py  fix_venv_after_copy.bat  install_env.bat  install_env.ps1  main.py  public.py  public.py.enc  pyproject.toml  repair_env.bat  repair_opencv.bat  repair_pillow.bat  requirement.txt  requirements-torch-cuda.txt  requirements.txt  run_parallel.bat  setup_python_portable.bat  smoke_imports.py  switch_to_python38portable.bat  test_config_ports.py  test_env.bat  test_gui_startup.py  test_ocr_numbers.py  test_ocr_simple.py  test_onnx_gpu_switch.py  test_output.txt  test_performance_monitor.py  test_physical_click.py  (+24 more)
OnnxOCR-main/: benchmark_performance.py  requirements.txt  test_accuracy.py  test_ocr.py
app/: controller.py  core.py  onnx_config.py  public_function.py  stability_optimizer.py  view.py  vmware_window_monitor.py  weekly_scheduler.py
dxGame/: ONNX_OCR 使用说明.md  __init__.py  check_vnc_dependencies.py  dx.py  dx.py.enc  dx_GDI.py  dx_MiniOpenCV.py  dx_OnnxOCR.py  dx_ThreadController.py  dx_Window.py  dx_a_start.py  dx_config.py  dx_core.py  dx_cv.py  dx_desktop.py  dx_dm_screen.py  dx_driver.py  dx_dxgi.py  dx_ime.py  dx_jpeg.py  dx_km.py  dx_km_class.py  dx_km_listen.py  dx_km_lj.py  dx_km_sendinput.py  dx_ldmnq.py  dx_model.py  dx_mouse_path.py  dx_ocr.py  dx_png.py  dx_process.py  (+11 more)
(+17 files in other folders)
